# python-multimodule-template

./: .dockerignore  .gitignore  README.md  docker-compose.yml  mypy.ini  opencode.json  pyproject.toml  ruff.toml
.opencode/plugins/: pre-commit-hook.ts
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/example/: Dockerfile  pyproject.toml
apps/example/src/example/: __init__.py  main.py
apps/example/tests/: __init__.py  test_main.py
tests/: test_integration.py
