[project]
name = "example"
version = "0.1.0"
requires-python = ">=3.12"
description = "Example application"
dependencies = ["shared"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example"]
